Fix sections alignment

--- a/src/app/styles.sass
+++ b/src/app/styles.sass
@@ -1,2 +1,7 @@
 @import "~bulma/bulma.sass";
 @import "~bulma-steps-component/bulma-steps.sass";
+
+
+.section
+  padding-left: 0
+  padding-right: 0
